--- a/CodeBook.rmd
+++ b/CodeBook.rmd
@@ -12,30 +12,23 @@ knitr::opts_chunk$set(echo = FALSE)
 tidy <- read.table("tidy.txt", sep = " ")
 ```
 
-## Description of the variables in the tidy.txt file
+## The tidy.txt file
 
-General description of the file including:
+The tidy.txt file is the product of the processing performed by the run_analysis.R file. It is in csv format, in UTF-8 encoding, using a blank space as a column separator. The file contains 180 observations with 81 variables each. The observations consist of 6 activities (WALKING, WALKING_UPSTAIRS, WALKING_DOWNSTAIRS, SITTING, STANDING, LAYING) performed by each of the 30 volunteers. The first two variables are dataset keys identifying the activities performed and the subjects identified by their ids. The other variables are averages calculated on the data collected by the accelerometer and gyroscope of the cellular attached to the waist of the subjects.
+The variables that gave rise to the calculated mean values obey the following nomenclature pattern:  
 
-- Dimensions of the dataset
-- Summary of the data
-- Variables present in the dataset
+* *f*: indicates frequency domain values;
+* *t*: indicates time domain values;
+* *Acc*: Acceleration;
+* *Mean*: Mean (Average);
+* *Std*: Standard deviation;
+* *Gyro*: Gyroscope;
+* *Mag*: Magnitude;
+* *BodyBody*: Body.
 
-(you can easily use Rcode for this, just load the dataset and provide the information directly form the tidy data file)
+***
 
-### Variable 1 (repeat this section for all variables in the dataset)
-
-Short description of what the variable describes.
-
-Some information on the variable including:
-
-- Class of the variable
-- Unique values/levels of the variable
-- Unit of measurement (if no unit of measurement list this as well)
-- In case names follow some schema, describe how entries were constructed (for example time-body-gyroscope-z has 4 levels of descriptors. Describe these 4 levels).
-
-(you can easily use Rcode for this, just load the dataset and provide the information directly form the tidy data file)
-
-This is an introductory sentence with absolutely no interest.
+##File Variables
 
 ### Key Variables
 ```{r KeyVariables, results="asis", eval=TRUE}
@@ -44,13 +37,9 @@ for (varname in names(tidy[1:2])) {
   cat("
 #### **`", varname,"`**
 * **Class**: ", class(var),"
-* **Summary**: 
+* **Values**: 
 <pre>")
-if (is.numeric(var)) {
-  print(table(var))
-} else {
-  print(summary(var))
-}
+print(unique(var))
 cat("</pre>
 
 ")
@@ -74,7 +63,3 @@ cat("</pre>
 ")
 }
 ```
-
-
-#### Notes on variable 1:
-If available, some additional notes on the variable not covered elsewehere. If no notes are present leave this section out.
